flexitimer (1.0.4) unstable; urgency=low

  * Duration can be specified when editing session

 -- Francesco Balestrieri <bale@balenet.com>  Tue, 10 Apr 2012 10:00:17 +0200

flexitimer (1.0.3) unstable; urgency=low

  * Report loading and sharing is asyncronous
  * Fixed: project list was not updated in project selection dialog

 -- Francesco Balestrieri <bale@balenet.com>  Tue, 10 Apr 2012 10:00:17 +0200

flexitimer (1.0.2) unstable; urgency=low

  * Small fix in About dialog

 -- Francesco Balestrieri <bale@balenet.com>  Fri, 30 Mar 2012 10:00:17 +0200

flexitimer (1.0.1) unstable; urgency=low

  * First release

 -- Francesco Balestrieri <bale@balenet.com>  Tue, 27 Mar 2012 10:00:17 +0200